Fix spacing between highscore elements

--- a/src/components/GameEnd.styles.scss
+++ b/src/components/GameEnd.styles.scss
@@ -1,7 +1,7 @@
 .modal-show {  
     position: absolute;
     margin: auto;
-    width: 50%;
+    width: 60%;
     height: fit-content;
     background: #ADADAD;
     border: none;
@@ -32,7 +32,6 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        text-align: center;
         width: 100%;
         padding-top: 20px;
         padding-bottom: 20px;
